--- a/api-reference/mocking-apis/strictness-modes.mdx
+++ b/api-reference/mocking-apis/strictness-modes.mdx
@@ -1,188 +1,154 @@
 ---
-title: "Nice, Naggy, and Strict Mocks"
-description: "Explains how to control the strictness level of mocks—allowing, warning, or failing on unexpected calls—via the NiceMock, NaggyMock, and StrictMock templates. Offers best practices for choosing modes based on test intent."
+title: "Mock Object Strictness Modes"
+description: "Reference for adjusting mock object behaviors with respect to unexpected and uninteresting calls, using NiceMock, NaggyMock, and StrictMock wrappers to control test verbosity and failure modes."
 ---
 
-# Nice, Naggy, and Strict Mocks
+# Mock Object Strictness Modes
 
-GoogleMock provides fine-grained control over how uninteresting calls—calls to mock methods with no explicitly set expectations—are treated in tests. This page explains the three main strictness modes available through the `NiceMock`, `NaggyMock`, and `StrictMock` class templates, guiding you to choose the appropriate mode depending on your testing intent and desired feedback level.
+## Overview
 
----
+GoogleMock provides flexible control over how mock objects handle **uninteresting** and **unexpected** calls through its three distinct strictness modes: **NiceMock**, **NaggyMock**, and **StrictMock**. These wrapper classes allow you to adjust the verbosity of warnings and the severity of failures that arise when mock methods are invoked without matching expectations.
 
-## Overview of Strictness Modes
-
-Each mock object created with GoogleMock falls into one of these categories regarding how it handles uninteresting calls:
-
-| Mock Template       | Behavior on Uninteresting Calls                          | Typical Use Case                              |
-|--------------------|----------------------------------------------------------|-----------------------------------------------|
-| `NiceMock<T>`      | Silently allows uninteresting calls, no warnings or errors | Common testing scenarios where unimportant calls should not distract |
-| `NaggyMock<T>`     | Allows uninteresting calls but prints warnings            | Default; useful when you want to be notified about unanticipated calls |
-| `StrictMock<T>`    | Treats uninteresting calls as test failures               | When verifying all mock interactions strictly and forbidding unexpected calls |
-
-
-### What Are Uninteresting Calls?
-
-Uninteresting calls happen when your code invokes a mocked method for which you have not set explicit expectations (`EXPECT_CALL`). By default, GoogleMock prints a warning if any such calls occur to help you spot potentially overlooked interactions.
-
-- **NaggyMock** (default mock mode): Emits warnings but allows the call.
-- **NiceMock**: Suppresses warnings for uninteresting calls, letting tests proceed quietly.
-- **StrictMock**: Treats uninteresting calls as errors, causing test failures.
-
-### Current Default Behavior
-
-Right now, a bare mock object behaves like a `NaggyMock`, generating warnings for uninteresting calls. GoogleMock plans to change this in the future to make bare mocks behave like `NiceMock` to promote more maintainable tests.
+By choosing the appropriate strictness mode, you can tailor test feedback to either ignore, warn about, or fail on calls that are not explicitly expected, improving test clarity and robustness.
 
 ---
 
-## Using NiceMock, NaggyMock, and StrictMock
+## Understanding Uninteresting and Unexpected Calls
 
-GoogleMock provides three class templates to take control of mock strictness. Suppose you have a mock class `MockFoo`.
+- **Uninteresting Call:** A call to a mock method for which *no* `EXPECT_CALL` has been set. These calls are allowed by default but usually generate warnings in the **Naggy** mode.
+- **Unexpected Call:** A call to a mock method where there *are* expectations set, but none matches the actual invocation (e.g., wrong arguments or call count). This is always a test failure regardless of the strictness mode.
 
-### Constructing Mocks with Strictness Wrappers
+
+## Strictness Modes
+
+### NiceMock<T>
+
+- **Behavior:** Suppresses warnings for uninteresting calls.
+- **Use Case:** Best when you want cleaner test output and trust that uninteresting calls are acceptable or irrelevant.
 
 ```cpp
 using ::testing::NiceMock;
-using ::testing::NaggyMock;
-using ::testing::StrictMock;
-
-NiceMock<MockFoo> nice_foo;      // Uninteresting calls silently ignored.
-NaggyMock<MockFoo> naggy_foo;    // Uninteresting calls produce warnings.
-StrictMock<MockFoo> strict_foo;  // Uninteresting calls cause test failures.
+NiceMock<MockFoo> nice_foo;
+EXPECT_CALL(nice_foo, DoThis());
+nice_foo.DoThis();
 ```
 
-**Key points:**
+- NiceMock is a subclass of the mock class `T` and inherits all constructors of `T`. Thus, you can construct `NiceMock<T>` with any arguments that `T` supports.
+- It only affects mock methods declared directly in `T` via `MOCK_METHOD`. Methods inherited from base classes may not be affected.
+- Its destructor must be virtual in `T` for proper behavior.
 
-- These templates subclass the mock class, inheriting its constructors.
-- They can wrap mocks with constructors requiring arguments:
+### NaggyMock<T> (Default)
+
+- **Behavior:** Prints warnings when uninteresting calls occur.
+- **Use Case:** Useful when actively developing or debugging tests to identify unexpected invocations.
 
 ```cpp
-NiceMock<MockBar> nice_bar("init string");
-NaggyMock<MockBar> naggy_bar(10, 'a');
-StrictMock<MockBar> strict_bar(1, 2, 3);
+using ::testing::NaggyMock;
+NaggyMock<MockFoo> naggy_foo;
+EXPECT_CALL(naggy_foo, DoThis());
+naggy_foo.DoThis();
 ```
 
-- Wrapping is mutually exclusive - nesting (e.g., `NiceMock<StrictMock<MockFoo>>`) is not supported.
+- NaggyMock is functionally equivalent to the plain mock class `T` currently, as mocks default to naggy behavior.
 
-### Behavior in Action
+### StrictMock<T>
 
-| Scenario                                          | NiceMock  | NaggyMock   | StrictMock         |
-|---------------------------------------------------|-----------|-------------|--------------------|
-| Calls a mocked method with expectation            | Allowed   | Allowed     | Allowed            |
-| Calls an uninteresting method (no expectation)   | Silently ignored | Warning printed | Test fails         |
-| Calls an unexpected method (with expectation but unmatched arguments) | Test fails | Test fails  | Test fails         |
+- **Behavior:** Treats all uninteresting calls as errors, failing the test immediately.
+- **Use Case:** When test correctness demands no calls are made outside of explicitly set expectations, enforcing strict interaction verification.
 
+```cpp
+using ::testing::StrictMock;
+StrictMock<MockFoo> strict_foo;
+EXPECT_CALL(strict_foo, DoThis());
+nstrict_foo.DoThis();
+```
 
-### Example
+- Like NiceMock and NaggyMock, StrictMock inherits constructors from `T`.
+- Only affects mock methods declared via `MOCK_METHOD` directly in `T`.
 
-Consider a mock with a method `DoThis()`:
+---
+
+## When to Use Each Mode
+
+| Mode       | Warning on Uninteresting Calls | Uninteresting Calls Fail Test? | Typical Use
+|------------|-------------------------------|-------------------------------|------------
+| NiceMock   | No                            | No                            | Production tests or when you want to focus only on explicitly tested interactions
+| NaggyMock  | Yes                           | No                            | Default during test development to track unexpected uses
+| StrictMock | Treated as errors             | Yes                           | To ensure full control over interactions and forbid any unplanned calls
+
+---
+
+## How to Apply Strictness Modes
+
+1. Define your mock class as normal with `MOCK_METHOD` declarations.
+2. Choose the strictness mode wrapper you want to use:
+   - Wrap mock instances with `NiceMock<>`, `NaggyMock<>`, or `StrictMock<>`.
+3. Construct the wrapped mock with the same constructor arguments as the base mock.
+
+For example:
 
 ```cpp
 class MockFoo {
-public:
-  MOCK_METHOD0(DoThis, void());
+ public:
+  MOCK_METHOD(void, DoThis, (), ());
+  MOCK_METHOD(int, GetValue, (), (const));
 };
 
-// Using NaggyMock (default behavior)
-NaggyMock<MockFoo> foo;
-foo.DoThis();  // Warning printed for uninteresting call.
-
-// Using NiceMock
-NiceMock<MockFoo> nice_foo;
-nice_foo.DoThis();  // No warning, call allowed.
-
-// Using StrictMock
-StrictMock<MockFoo> strict_foo;
-strict_foo.DoThis();  // Causes test failure for uninteresting call.
+// Nice mock suppressing uninteresting call warnings
+NiceMock<MockFoo> nice_mock;
+// Naggy mock printing warnings on uninteresting calls
+NaggyMock<MockFoo> naggy_mock;
+// Strict mock failing on uninteresting calls
+StrictMock<MockFoo> strict_mock;
 ```
 
 ---
 
-## Best Practices for Choosing Strictness Mode
+## Practical Guidance
 
-To get the most out of GoogleMock while maintaining test clarity and stability, follow these guidelines:
+### Suppressing Warnings for Uninteresting Calls
 
-### Use `NiceMock` for Most Tests
+- Use `NiceMock<T>` if some mock methods are not relevant to your test and you want to avoid warnings.
+- Alternatively, explicitly use `EXPECT_CALL(mock, Method(_)).Times(AnyNumber())` to mark certain methods as expected any number of times.
 
-- When you don't care about calls except those explicitly expected.
-- Suppresses distracting warnings about uninteresting calls.
-- Encourages maintainable and resilient tests.
+### Enforcing Interaction Contracts
 
-### Use `NaggyMock` During Development
+- Use `StrictMock<T>` to treat any unexpected or uninteresting calls as errors, enforcing tight control on mock interactions.
 
-- Helpful while writing tests to catch accidentally unmocked calls early.
-- Provides verbose feedback.
+### Debugging Unexpected Calls
 
-### Use `StrictMock` for Critical Verification
+- Use `NaggyMock<T>` (default) to see warnings that can help discover calls that you might want to set expectations on.
+- Use the command-line flag `--gmock_verbose=info` during test runs to get detailed call traces for finer debugging.
 
-- When it's essential that tests *fail* if unexpected interactions occur.
-- Best for testing that your code does *only* what it is supposed to.
-- Use sparingly to avoid brittle tests.
+### Leak Detection and Strictness
 
-### Combine With Explicit Expectations
-
-Regardless of strictness mode, always explicitly specify your expectations with `EXPECT_CALL`. This ensures precise control over method call constraints.
-
-### Avoid Nesting Strictness Wrappers
-
-Nesting `NiceMock`, `NaggyMock`, and `StrictMock` is not supported and may lead to undefined behavior. Apply one strictness modifier per mock instance.
+- Strictness mode wrappers do not affect leak detection but ensure that expectations are verified upon destruction.
+- Use `Mock::AllowLeak(&mock)` if you need to deliberately leak a mock and suppress leak errors.
 
 ---
 
-## Implementation Notes
+## Under the Hood
 
-- The strictness wrappers internally register the mock instance with GoogleMock's runtime to alter its uninteresting-call handling behavior.
-- Each wrapper corresponds to a specific internal registration method:
-  - `NiceMock` allows uninteresting calls silently.
-  - `NaggyMock` warns on uninteresting calls.
-  - `StrictMock` fails on uninteresting calls.
+- The strictness modes work by registering call reaction behaviors with the `testing::Mock` framework.
+- Upon construction, each strictness wrapper class registers the reaction for uninteresting calls (allow, warn, or fail).
+- Upon destruction, they unregister these behaviors automatically.
 
-## Common Pitfalls
-
-- **Destructor Must be Virtual:** If the mock class destructor is not virtual, strictness wrappers may not function correctly.
-- **Unmocked Base Class Methods:** Wrapping only affects mock methods defined directly in the mock class with `MOCK_METHOD`.
-- **Unintended Test Failures:** Using `StrictMock` indiscriminately can cause maintenance overhead due to test breaks on harmless uninteresting calls.
+This design ensures that all calls to the mock object behave according to the selected strictness, without extra user code.
 
 ---
 
-## Troubleshooting
+## Example: Effect of Strictness Modes
 
-### Warning: "Uninteresting mock function call"
+Consider a mock class:
 
-This warning indicates an uninteresting call was made on a `NaggyMock` or default mock. To address:
+```cpp
+class MockFoo {
+ public:
+  MOCK_METHOD(void, Bar, (int x));
+};
+```
 
-- Confirm if you intended the call to be unmocked.
-- If yes, consider using `NiceMock` to silence warnings.
-- If no, add an appropriate `EXPECT_CALL` or `ON_CALL`.
-
-### Unexpected Test Failures with `StrictMock`
-
-- Review test code for unintended calls to mock methods.
-- Ensure all expected calls are explicitly specified.
-- To ease test maintenance, resort to strict mocks only for critical scenarios.
-
-### Unrecognized Strictness Behavior
-
-- Check that the mock class methods being mocked are declared with `MOCK_METHOD` directly in that class.
-- Verify the mock class has a virtual destructor.
-
----
-
-## Summary
-
-Using `NiceMock`, `NaggyMock`, and `StrictMock` controls how GoogleMock treats uninteresting calls in your tests, balancing feedback verbosity and strictness for interaction verification. Choose `NiceMock` for quiet tests, `NaggyMock` for warning visibility, and `StrictMock` for strict failure detection according to your testing goals.
-
----
-
-## Further Reading and Links
-
-- [Mocking Reference: NiceMock, NaggyMock, StrictMock](https://google.github.io/googletest/reference/mocking.html#NiceMock)
-- [gMock Cookbook: The Nice, the Strict, and the Naggy](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy)
-- [gMock Cheat Sheet: Mock Classes, Strictness Wrappers](https://google.github.io/googletest/gmock_cheat_sheet.html#The_Nice_the_Strict_and_the_Naggy)
-- [Mock Strictness Modes Guide](https://google.github.io/googletest/guides/mocking-scenarios/mock-strictness-best-practices.html)
-
----
-
-## Code Example
+Usage with different modes:
 
 ```cpp
 #include <gmock/gmock.h>
@@ -190,21 +156,67 @@ using ::testing::NiceMock;
 using ::testing::NaggyMock;
 using ::testing::StrictMock;
 
-class MockFoo {
- public:
-  MOCK_METHOD(void, DoThis, ());
-};
+NiceMock<MockFoo> nice;
+NaggyMock<MockFoo> naggy;
+StrictMock<MockFoo> strict;
 
-// NiceMock example: no warnings for uninteresting calls
-NiceMock<MockFoo> nice_foo;
-nice_foo.DoThis();  // Allowed silently
+EXPECT_CALL(nice, Bar(5));
+EXPECT_CALL(naggy, Bar(5));
+EXPECT_CALL(strict, Bar(5));
 
-// NaggyMock example: warnings for uninteresting calls
-NaggyMock<MockFoo> naggy_foo;
-naggy_foo.DoThis();  // Warning printed
-
-// StrictMock example: test failure on uninteresting calls
-StrictMock<MockFoo> strict_foo;
-strict_foo.DoThis();  // Test fails
-
+nice.Bar(3);   // No warning, allowed
+naggy.Bar(3);  // Warning on uninteresting call
+strict.Bar(3); // Test failure: uninteresting call
 ```
+
+---
+
+## Troubleshooting
+
+### Unexpected Calls
+
+- Always ensure `EXPECT_CALL` is used before exercising the mock object.
+- Use `--gmock_verbose=info` to see all matching calls and verify if the arguments align.
+
+### Uninteresting Call Warnings
+
+- Confirm if calls without expectations are valid.
+- Use `NiceMock` to suppress warnings or add catch-all expectations like:
+  
+  ```cpp
+  EXPECT_CALL(mock_obj, Method(_)).Times(testing::AnyNumber());
+  ```
+
+### Verifying and Resetting
+
+You can explicitly verify expectations and clear them before destruction:
+
+```cpp
+using ::testing::Mock;
+Mock::VerifyAndClearExpectations(&mock_obj);
+```
+
+Do NOT add new expectations after verification for a mock, as this leads to undefined behavior.
+
+---
+
+## References and Further Reading
+
+- [Nice, Naggy, and Strict Mocks](https://google.github.io/googletest/gmock_cook_book.html#NiceStrictNaggy)
+- [GoogleMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
+- [Defining Expectations & Behaviors](https://google.github.io/googletest/reference/mocking.md#EXPECT_CALL)
+- [Mocking Methods & Objects](https://google.github.io/googletest/api/reference/mocking-methods.html)
+
+---
+
+## Related Documentation
+
+- [gMock Mocking Reference](reference/mocking.md) for detailed explanation of `EXPECT_CALL`, `ON_CALL` and modifiers.
+- [gMock Cookbook](gmock_cook_book.md) for recipes on advanced mocking patterns.
+- [GoogleTest Running and Configuring Tests](api-reference/core-apis/running-tests) for test execution flags like `--gmock_verbose`.
+
+---
+
+## Summary
+
+GoogleMock's strictness modes provide precise control over how uninteresting and unexpected mock calls are handled. Use `NiceMock` to silence uninteresting call warnings, `NaggyMock` to get warnings (default behavior), and `StrictMock` to fail tests on any uninteresting calls. These modes help maintain test clarity and enforce interaction contracts to fit development and production testing needs.
