--- a/changelog/release-highlights/new-features-improvements.mdx
+++ b/changelog/release-highlights/new-features-improvements.mdx
@@ -1,20 +1,31 @@
 ---
 title: "New Features & Improvements"
-description: "Explore the most recent advancements, newly introduced features, improved workflows, and enhancements brought to both core testing (GoogleTest) and mocking (GoogleMock). Clear highlights help you leverage the latest capabilities in your test suites."
+description: "Detailed breakdowns of newly introduced capabilities, enhancements in matchers, actions, or test runners, and noteworthy improvements in test usability or integration. Illustrates how the framework's functionality has expanded and offers advice for immediate benefit."
 ---
 
-# New Features & Improvements in GoogleTest & GoogleMock
+# New Features & Improvements
 
-Welcome to the latest overview of new features and workflow improvements in both GoogleTest (the core C++ testing framework) and GoogleMock (its powerful mocking extension). This document highlights the enhancements designed to make your testing experience more intuitive, efficient, and flexible. Whether you are writing your first test or managing large-scale mock-based test suites, these updates will help you leverage the best of GoogleTest and GoogleMock.
+Detailed breakdowns of newly introduced capabilities, enhancements in matchers, actions, or test runners, and noteworthy improvements in test usability or integration. Illustrates how the framework's functionality has expanded and offers advice for immediate benefit.
 
 ---
 
-## 1. Enhanced Mocking Syntax and Usability
+## Overview
 
-### 1.1. Modernized `MOCK_METHOD` Macro
+This page highlights the latest enhancements introduced in GoogleTest and GoogleMock. It focuses on the value these improvements bring to users by expanding testing capabilities, simplifying mocking syntax, and improving test reliability and maintainability.
 
-- The `MOCK_METHOD` macro continues to be the cornerstone for defining mock methods with improved parsing of complex argument types. When your mock method involves types with commas (e.g., `std::pair` or `std::map`), utilize parentheses or type aliases to ensure correct macro expansion.
+Users will find clear guidance on new features, practical examples demonstrating their usage, and recommendations on how to integrate these improvements into their code bases.
 
+---
+
+## Mocking Enhancements
+
+### Expanded `MOCK_METHOD` Coverage
+
+- **Support for Complex Argument Types**: Improved handling of argument types containing commas by enforcing parentheses or using type aliases, ensuring smooth mock method declarations without compilation issues.
+
+- **Extended Qualifier Support**: New and more flexible support for method qualifiers such as `const`, `override`, `noexcept`, `Calltype(...)`, and reference qualifiers (`ref(&)`, `ref(&&)`) to more precisely mock the targeted methods.
+
+#### Example:
 ```cpp
 class MyMock {
  public:
@@ -23,205 +34,159 @@ class MyMock {
 };
 ```
 
-- Qualifier support (`const`, `override`, `noexcept`, `Calltype`, `ref`) has been solidified for compatibility and readability, allowing mock methods to faithfully override virtual methods.
+### Improved Mock Class Usage
 
-### 1.2. Mocking of Non-public and Overloaded Methods
+- **Public Mock Methods**: All mock methods must be declared in the public section to allow `ON_CALL` and `EXPECT_CALL` to properly reference and manage mock behaviors, regardless of original method access level.
 
-- Regardless of whether a method is `public`, `protected`, or `private` in the base class, mock methods **must** be declared `public` in the mock class. This design ensures external access for `ON_CALL` and `EXPECT_CALL` to function correctly.
+- **Overloaded Method Mocking**: Seamless support for overloaded functions, including const and non-const variants, allowing distinct mocking without ambiguity.
 
-- Overloaded methods are supported naturally with clear code patterns to mock each overload explicitly. Use `using BaseClass::Method` to avoid hiding overloads unintentionally.
+- **Template Class Mocking**: Template classes can now be mocked similarly to regular classes, extending mocking support for generic code.
 
-### 1.3. Mocking Class Templates
+### Mocking Non-Virtual Methods
 
-- GoogleMock now fully supports mocking of class templates, enabling test writers to mock generic interfaces or containers with ease.
+- Enables mocking non-virtual methods by declaring mock methods with the same signatures without inheritance from the real class and using compile-time type selection to swap real/ mock implementations.
+
+### `ON_CALL` and `EXPECT_CALL` Behavior Improvements
+
+- **Behavior Specification Decoupled from Expectations**: `ON_CALL` defines default method behavior without setting call expectations, promoting cleaner and more maintainable tests.
+
+- **Flexible and Chainable Clauses**: Method behaviors and expectations can be controlled through a well-defined chain of clauses like `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()`, allowing precise control over mock calls.
+
+---
+
+## Mock Object Strictness Modes
+
+GoogleMock introduces and refines three strictness wrappers to control uninteresting call handling:
+
+- **NiceMock<T>**: Suppresses warnings on uninteresting calls, suitable when tests do not require strict enforcement.
+
+- **NaggyMock<T>**: (Default behavior) Prints warnings on uninteresting calls, helpful for debugging unexpected interactions.
+
+- **StrictMock<T>**: Treats uninteresting calls as test failures, enforcing rigorous test correctness.
+
+### Practical Usage
 
 ```cpp
-template <typename T>
-class MockStack : public StackInterface<T> {
- public:
-  MOCK_METHOD(int, GetSize, (), (const, override));
-  MOCK_METHOD(void, Push, (const T& x), (override));
-};
+using ::testing::NiceMock;
+using ::testing::NaggyMock;
+using ::testing::StrictMock;
+
+NiceMock<MockClass> nice_mock;   // No warning on uninteresting calls
+NaggyMock<MockClass> naggy_mock; // Warnings on uninteresting calls
+StrictMock<MockClass> strict_mock; // Errors on uninteresting calls
 ```
 
-### 1.4. Delegation Patterns
+### Notes:
 
-- You can delegate mock calls to an existing fake or real implementation, combining the benefits of mocks (verification of interactions) with production behavior.
-
-- Delegation empowers incrementally replacing legacy code with mocks without losing behavior fidelity.
-
----
-
-## 2. Improved Expectation Control and Sequencing
-
-### 2.1. Flexible Use of `EXPECT_CALL` clauses
-
-- The clauses `.With()`, `.Times()`, `.InSequence()`, `.After()`, `.WillOnce()`, `.WillRepeatedly()`, and `.RetiresOnSaturation()` continue to empower precise control over expectations.
-
-- Clause ordering is now strictly enforced to improve error messages and developer guidance.
-
-- The `.With()` clause lets you express complex predicates on the aggregated arguments in a natural and readable way.
-
-### 2.2. Support for Partial Ordering of Calls
-
-- You can now specify partial orders of expected calls using multiple `Sequence` objects and `.InSequence()` clauses, forming directed acyclic graphs (DAGs) of call order.
-
-- This allows tests to express real-world interaction constraints without unnecessary brittleness caused by strict linear ordering.
-
-### 2.3. Cardinality Enhancements
-
-- Cardinality expressions such as `AnyNumber()`, `AtLeast()`, `AtMost()`, `Between()`, and `Exactly()` enable fine-grained control over call counts.
-
-- Sticky expectations ensure an expectation remains active until explicitly retired or superseded, minimizing surprising failures.
-
-- `.RetiresOnSaturation()` is a preferred method to disable expectations cleanly once their call count is met.
+- These wrappers inherit constructors transparently.
+- They only apply to mock methods directly defined by `MOCK_METHOD` in the mock class.
+- Combining multiple wrappers (e.g., `NiceMock<StrictMock<T>>`) is unsupported and discouraged.
 
 ---
 
-## 3. More Expressive Actions and Matchers
+## Expectation and Behavior Specifications
 
-### 3.1. Expanded Built-in Actions
+### Call Cardinalities
 
-- Built-in actions such as `Return()`, `ReturnRef()`, `ReturnPointee()`, `SetArgPointee()`, `SetArrayArgument()`, `Invoke()`, and `DoAll()` provide powerful means to shape mock behavior.
+- Expanded cardinality expressions allow specifying precise invocation counts:
+  - `AnyNumber()`, `AtLeast(n)`, `AtMost(n)`, `Between(m, n)`, and `Exactly(n)`.
 
-- Actions accepting lambdas, functors, or callable objects greatly simplify expressing complex behavior and side effects inline.
+- Cardinalities can be inferred automatically based on `WillOnce()` and `WillRepeatedly()` usage, reducing boilerplate.
 
-### 3.2. Move-Only Type Support
+### Sequencing of Calls
 
-- GoogleMock now supports mocking methods with move-only types (e.g., `std::unique_ptr<>`) directly in method signatures.
+- The `.InSequence()` clause and `InSequence` object enable specifying strict or partial ordering of expected calls, supporting scenarios like:
 
-- Lambda-based actions enable returning and accepting move-only types seamlessly, expanding test coverage for modern C++ patterns.
+  - Sequential call order enforcement.
+  - Partial orders expressed using multiple `Sequence` objects.
 
-### 3.3. Composite and Custom Matchers
+- `.After()` clause supports setting call dependencies for more flexible sequencing.
 
-- Writing custom matchers is simplified with the `MATCHER`, `MATCHER_P*`, and class-based matcher interfaces.
+### Behavior Actions
 
-- Composite matchers allow combining multiple matchers logically with `AllOf()`, `AnyOf()`, and `Not()`.
+- Supports built-in actions like `Return()`, `ReturnRef()`, `ReturnPointee()`, and side-effect actions such as `SetArgPointee()`, `SetArrayArgument()`, and `Invoke()` with functions, functors, or lambdas.
 
-- The framework ensures detailed failure explanations, aiding faster debug cycles.
+- Allows chaining actions with `DoAll()` for complex mocks.
 
----
-
-## 4. Testing and Debugging Enhancements
-
-### 4.1. Controlled Verbosity and Diagnostic Output
-
-- The `--gmock_verbose` flag supports levels `info`, `warning`, and `error` to regulate runtime diagnostic verbosity.
-
-- At `info` verbosity, each mock call logs matching expectations and call details including full argument and return value dumps plus stack traces.
-
-- This provides developers with 'supervision' power to trace test mock calls effectively.
-
-### 4.2. Support for Deleting Mock Objects Within Actions
-
-- It is now safe and supported to delete the mock object inside an action (including within a mock method) without causing deadlocks or inconsistent verification.
-
-- This allows advanced lifecycle control scenarios in tests.
-
-### 4.3. Partial Mock Verification
-
-- You can force verification of mock expectations at a specific point via `Mock::VerifyAndClearExpectations(&mock_obj)`, ensuring even leaked or long-lived mocks are verified without requiring destruction.
-
-- This is helpful in complex ownership models.
+- Enables defining custom actions using functors, lambdas, or macros (`ACTION`, `ACTION_P`, etc). 
 
 ---
 
-## 5. Integration and Build Improvements
+## Matchers
 
-### 5.1. Initialization Functions
+### Comprehensive Matching
 
-- `InitGoogleMock` provides overloads that support standard `argc/argv`, UNICODE, and embedded platforms without `argc/argv`.
+- Built-in matchers cover equality, inequality, logical composition, container matching, property and field checking, predicate matching, and pointer content matching through utilities like `Field()`, `Property()`, `Pointee()`, `Truly()`, and others.
 
-- This ensures broad compatibility across diverse environments.
+### Custom Matcher Creation
 
-### 5.2. Comprehensive Header Inclusion
+- Facilities for defining quick matchers using `MATCHER`, `MATCHER_P`, and matcher classes.
 
-- Including `gmock/gmock.h` brings in a complete set of subcomponents such as actions, cardinalities, matchers, and mocking utilities.
+- Supports monomorphic and polymorphic matchers to match specific or multiple types.
 
-- The modular design keeps compilation manageable while enabling rich features.
-
----
-
-## 6. Practical Tips & Best Practices
-
-- Use `ON_CALL` to define default mock behaviors without requiring exact call expectations.
-
-- Reserve `EXPECT_CALL` for specifying calls you want to verify, minimizing brittle tests.
-
-- Use `NiceMock` to suppress noisy warnings on uninteresting mock calls when their calls are irrelevant.
-
-- Use `StrictMock` to enforce strict call constraints, beneficial for rigorous interaction tests.
-
-- For better compile-time performance, place mock constructor and destructor definitions in `.cc` files when mocking many methods.
-
-- Avoid mocking concrete classes directly; prefer defining interfaces and adaptors for better test stability and design.
-
-- Use sequences and `InSequence` blocks to express order requirements clearly.
-
-- Leverage detailed diagnostic modes during test development to quickly identify expectation failures or unexpected calls.
+- Emphasizes matchers must be pure functions without side effects to maintain test capture consistency.
 
 ---
 
-## 7. Example: Defining and Using a Mock Class
+## Practical Tips and Best Practices
 
-```cpp
-#include <gmock/gmock.h>
+- Prefer `ON_CALL` for default behavior; use `EXPECT_CALL` only when verifying call expectations.
 
-// Interface
-class Turtle {
- public:
-  virtual ~Turtle() {}
-  virtual void PenUp() = 0;
-  virtual void PenDown() = 0;
-  virtual void Forward(int distance) = 0;
-  virtual int GetX() const = 0;
-};
+- Use `NiceMock` to suppress unimportant warnings, `StrictMock` when errors on uninteresting calls are desired.
 
-// Mock
-class MockTurtle : public Turtle {
- public:
-  MOCK_METHOD(void, PenUp, (), (override));
-  MOCK_METHOD(void, PenDown, (), (override));
-  MOCK_METHOD(void, Forward, (int distance), (override));
-  MOCK_METHOD(int, GetX, (), (const, override));
-};
+- Use `.RetiresOnSaturation()` to prevent sticky expectations from causing false upper-bound violations.
 
-// Usage in tests
-using ::testing::Return;
-using ::testing::_;
-using ::testing::InSequence;
+- Organize call expectations into sequences for order-sensitive verification.
 
-TEST(PaintTest, DrawsLine) {
-  MockTurtle mock_turtle;
+- Use default values and default actions judiciously to avoid over-specification and maintain test resilience.
 
-  {
-    InSequence s;
-    EXPECT_CALL(mock_turtle, PenDown());
-    EXPECT_CALL(mock_turtle, Forward(100));
-    EXPECT_CALL(mock_turtle, PenUp());
-  }
-
-  // Run function under test here
-  // painter.DrawLine(&mock_turtle);
-
-  // Mock verifies calls and order upon destruction
-}
-```
+- Avoid mocking functions that are not virtual unless employing the high-performance dependency injection pattern.
 
 ---
 
-For more in-depth recipes, patterns, and API details see the [gMock Cookbook](../docs/gmock_cook_book.md), [Mocking Reference](../api-reference/matchers-mocking/defining-mocks-expectations.md), and [gMock for Dummies](../docs/gmock_for_dummies.md).
+## Troubleshooting and Debugging Improvements
+
+- Enhanced diagnostic messages include stack traces, argument values, and detailed failure reasonings.
+
+- Verbosity levels (`--gmock_verbose=info|warning|error`) enable users to control the detail of logging for debugging.
+
+- Support for `Mock::VerifyAndClearExpectations()` to force verification before destruction, useful for heap-allocated mocks or complex lifecycles.
 
 ---
 
-<Info>
-Stay up to date with the latest releases and consider your project’s compatibility when adopting new features. Leverage improved diagnostic tools and matchers to write cleaner, faster tests.
-</Info>
+## Guidance for Integration
+
+- These improvements encourage better maintainability of large mock test suites, more precise and informative expectations, and smoother integration into continuous testing pipelines.
+
+- Users should migrate legacy mocking patterns to use the modern `MOCK_METHOD` macro and strictness wrappers for clearer test behavior.
+
+- Recommended to review usage of `EXPECT_CALL` ordering and cardinality alongside the sequencing features to avoid brittle or flaky tests.
+
+- Use type safety techniques such as `SafeMatcherCast<T>` and disambiguate overloaded methods with wrappers like `Const()` or explicit matcher types.
 
 ---
 
-[GoogleTest Primer](../overview/introduction-core-value/what-is-googletest.md) | [Installation & Setup](../getting-started/installation-initialization/installation-cmake.md) | [Mocking Patterns Guide](../guides/mocking-patterns/introduction-to-mocking.md) | [Matchers Reference](../api-reference/matchers-mocking/argument-matchers.md)
+## Additional Resources
+
+For a deeper understanding and examples on new features and best practices, refer to:
+
+- [gMock Cookbook](https://google.github.io/googletest/gmock_cook_book.html)
+- [Mocking Reference](https://google.github.io/googletest/reference/mocking.html)
+- [gMock Cheat Sheet](https://google.github.io/googletest/gmock_cheat_sheet.html)
+- [Strictness Modes Documentation](https://google.github.io/googletest/api/gmock__strictness__modes_8md.html)
+- [Using Matchers Guide](https://google.github.io/googletest/api/gmock__using__matchers_8md.html)
 
 ---
 
-<Source url="https://github.com/google/googletest" paths='[{"path":"googlemock/include/gmock/gmock.h","range":"1-72"},{"path":"docs/gmock_cook_book.md","range":"1-3704"},{"path":"docs/gmock_for_dummies.md","range":"1-547"},{"path":"docs/reference/mocking.md","range":"1-1736"},{"path":"googlemock/test/gmock-spec-builders_test.cc","range":"1-570"}]' />
+<Note>
+Ensure that mock classes define mock methods publicly and prefer `NiceMock` in tests to reduce noise unless strict call validation is essential.
+</Note>
+
+<Tip>
+When defining sequences, order your `EXPECT_CALL` statements naturally without reversing them by leveraging `.RetiresOnSaturation()` for better readability and maintenance.
+</Tip>
+
+---
+
+_Last updated with the most current GoogleTest and GoogleMock feature set._
+
